--- a/furfuturefunding/src/components/AboutUs.css
+++ b/furfuturefunding/src/components/AboutUs.css
@@ -9,7 +9,9 @@
 h1 {
     font-size: 2.5rem;
     margin-bottom: 40px;
+    margin-top: 40px;
     color: #130265;
+    text-align: center;
   }
 
 p {
