--- a/furfuturefunding/src/components/LoginForm.css
+++ b/furfuturefunding/src/components/LoginForm.css
@@ -7,13 +7,12 @@
   width: 300px;
   height: auto;
   position: absolute;
-  top: -250px; /* Adjust this value as needed */
+  top: -250px;
   left: 490px;
   transform: translateX(-50%);
   margin-top: 1px;
   margin-left: auto;
 }
-
 
 .login-background {
   background-image: url('src/assets/ramcats 1.png');
@@ -23,8 +22,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
- }
- 
+}
 
 .login-container {
   width: 500px;
@@ -44,7 +42,6 @@
   font-size: 2.5rem;
   font-weight: bold;
 }
-
 
 .form-group {
   margin-bottom: 1.5rem;
@@ -69,8 +66,8 @@ input[type="password"] {
   font-size: 0.9rem;
   color: #1a0f4d;
   cursor: pointer;
-
 }
+
 .primary-button {
   width: 80%;
   padding: 0.75rem;
@@ -82,6 +79,12 @@ input[type="password"] {
   margin: 0 auto;
 }
 
+.primary-button:hover {
+  background-color: #FF914D;
+  transform: translateY(-2px);
+  color: #000000;
+}
+
 .secondary-button {
   width: 50%;
   padding: 0.75rem;
@@ -91,4 +94,55 @@ input[type="password"] {
   border-radius: 8px;
   display: block;
   margin: 8px 120px;
+}
+
+.secondary-button:hover {
+  background-color: #FF914D;
+  transform: translateY(-2px);
+  color: #000000;
+}
+
+/* Mobile styles */
+@media (max-width: 768px) {
+  .cat-icon {
+    width: 200px;
+    top: -215px;
+    left: 190px;
+  }
+
+  .login-container {
+    width: 70%;
+    height: auto;
+    min-height: 300px;
+    padding: 1.5rem;
+    margin-top: 80px;
+  }
+
+  .login-title {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+  }
+
+  input[type="text"],
+  input[type="password"] {
+    width: 90%;
+    padding: 0.5rem;
+    font-size: 0.9rem;
+  }
+
+  .remember-me {
+    margin-left: 1rem;
+    font-size: 0.8rem;
+  }
+
+  .primary-button {
+    width: 90%;
+    padding: 0.6rem;
+  }
+
+  .secondary-button {
+    width: 70%;
+    margin: 8px auto;
+    padding: 0.6rem;
+  }
 }
