--- a/furfuturefunding/src/components/HeroSection.css
+++ b/furfuturefunding/src/components/HeroSection.css
@@ -1,46 +1,51 @@
-
-@media (max-width: 768px) {
-  .about-section {
-    padding: 24px 16px;
-  }
-
-  h1 {
-    font-size: 2rem;
-    margin-bottom: 24px;
-    text-align: center;
-  }
-
-  p {
-    font-size: 1rem;
-    margin-bottom: 24px;
-    text-align: center;
-  }
-
-  .team-grid {
-    grid-template-columns: 1fr;
-    gap: 16px;
-  }
-
-  .team-member {
-    padding: 16px;
-  }
-
-  .member-image {
-    width: 80%;
-    margin: 0 auto 12px;
-  }
-
-  .member-info h3 {
-    font-size: 1.5rem;
-  }
-
-  .position {
-    font-size: 1rem;
-    margin-bottom: 6px;
-  }
-
-  .bio {
-    font-size: 0.875rem;
-    padding: 0 12px;
-  }
+/* ScholarshipSearch.css */
+.container {
+  margin-top: 72px;
+  display: flex;
+  width: 100%;
 }
+
+.headline {
+  width: 50%;
+  background-color: #1e1b4b;
+  padding: 48px 24px;
+}
+
+.headline h1 {
+  color: white;
+  font-size: 2.5rem;
+  font-weight: bold;
+  max-width: 36rem;
+}
+
+.logo-section {
+  width: 50%;
+  background-color: #FF914D;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-section img {
+  width: 300px; 
+  height: 300px;
+  align-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-container {
+  width: 192px;
+  height: 192px;
+}
+
+/* .logo {
+  background-color: #1e1b4b;
+  border-radius: 50%;
+  padding: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
+
