--- a/furfuturefunding/src/components/SignUpForm.css
+++ b/furfuturefunding/src/components/SignUpForm.css
@@ -5,7 +5,6 @@
     overflow: hidden;
 }
 
-
 .signup-button {
     background: #FF914D;
     color: white;
@@ -13,7 +12,6 @@
     border-radius: 4px;
     border: none;
 }
-
 
 h1 {
     color: #1a0f4d;
@@ -27,8 +25,23 @@ h1 {
     padding-bottom: 1rem;
 }
 
-.form-group {
+.sign-up-form-group {
     margin-bottom: 1.5rem;
+
+    input {
+        width: 100%;
+        padding: 0.8rem;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+    }
+}
+
+.sign-up-form-group input {
+    margin-bottom: 1rem;
+}
+
+.sign-up-form-group input:last-child {
+    margin-bottom: 0;
 }
 
 label {
@@ -37,13 +50,7 @@ label {
     font-weight: 500;
 }
 
-input {
-    width: 100%;
-    padding: 0.8rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-bottom: 1rem;
-}
+
 
 .submit-btn {
     width: 100%;
@@ -60,13 +67,11 @@ input {
     position: absolute;
     top: 110px;
     right: 150px;
-    /* Adjust position */
     z-index: 2;
 }
 
 .paw {
     width: 200px;
-    /* Increase size */
     height: auto;
 }
 
@@ -77,7 +82,6 @@ input {
     border-radius: 12px;
     padding: 2rem;
     margin: 8rem auto;
-    /* Add more top margin to accommodate mascot */
     position: relative;
     z-index: 1;
 }
