--- a/furfuturefunding/src/components/LoginForm.css
+++ b/furfuturefunding/src/components/LoginForm.css
@@ -1,17 +1,15 @@
 .cat-container {
-  position: relative;
-  z-index: 2;
+  height: 50px;
 }
 
 .cat-icon {
-  width: 300px;
-  height: auto;
+  height: 150px;
+  /* Reduced height */
   position: absolute;
-  top: -260px;
-  left: 490px;
+  top: 78px;
+  /* Moves icon down */
+  left: 60%;
   transform: translateX(-50%);
-  margin-top: 1px;
-  margin-left: auto;
 }
 
 .login-background {
@@ -20,19 +18,20 @@
   background-position: center;
   min-height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
 .login-container {
   width: 500px;
-  height: 380px;
+  height: 100%;
   padding: 2rem;
   background: white;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
   border: 2px solid #000000;
   border-radius: 8px;
-  margin-top: 130px;
+  /* margin-top: 130px; */
 }
 
 .login-title {
@@ -43,45 +42,22 @@
   font-weight: bold;
 }
 
-.login-form-group {
-  margin-bottom: 1.5rem;
+.login-form-group,
+.form-group {
+  margin-bottom: 2rem;
 }
 
 input[type="text"],
 input[type="password"],
 input[type="email"] {
-  width: 80%;
-  padding: 0.75rem;
+  width: 90%;
+  padding: 1rem;
   border: 2px solid #ddd;
   border-radius: 8px;
   font-size: 1rem;
   background-color: #f8f8f8;
   display: block;
   margin: 0 auto;
-}
-
-.remember-me {
-  text-align: left;
-  margin-bottom: 1.5rem;
-  margin-left: 2rem;
-  font-size: 0.9rem;
-  color: #1a0f4d;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.remember-me input[type="checkbox"] {
-  width: 18px;
-  height: 18px;
-  margin: 0;
-  cursor: pointer;
-  accent-color: #1a0f4d;
-}
-
-.remember-me label {
-  cursor: pointer;
 }
 
 .primary-button {
@@ -92,7 +68,8 @@ input[type="email"] {
   border: none;
   border-radius: 8px;
   display: block;
-  margin: 0 auto;
+  margin: 0 auto 1rem auto;
+
 }
 
 .primary-button:hover {
@@ -102,14 +79,14 @@ input[type="email"] {
 }
 
 .secondary-button {
-  width: 50%;
+  width: 80%;
   padding: 0.75rem;
-  background-color: #000000;
+  background-color: #1a0f4d;
   color: white;
   border: none;
   border-radius: 8px;
   display: block;
-  margin: 8px 120px;
+  margin: 0 auto;
 }
 
 .secondary-button:hover {
