--- a/furfuturefunding/src/components/SignUpForm.css
+++ b/furfuturefunding/src/components/SignUpForm.css
@@ -28,7 +28,8 @@ h1 {
 .sign-up-form-group {
     margin-bottom: 1.5rem;
 
-    input {
+    input,
+    textarea {
         width: 100%;
         padding: 0.8rem;
         border: 1px solid #ccc;
@@ -36,8 +37,14 @@ h1 {
     }
 }
 
-.sign-up-form-group input {
+.sign-up-form-group input,
+.sign-up-form-group textarea {
     margin-bottom: 1rem;
+}
+
+textarea {
+    margin: 10px;
+    padding: 10px;
 }
 
 .sign-up-form-group input:last-child {
