--- a/furfuturefunding/src/components/AboutUs.css
+++ b/furfuturefunding/src/components/AboutUs.css
@@ -18,7 +18,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(255, 255, 255, 0.9);
+  background: rgba(255, 255, 255, 0.5);
   z-index: 1;
 }
 
@@ -85,7 +85,7 @@
   padding: 1rem;
   margin-top: -1rem;
   max-width: 100%;
-  height: 380px;
+  height: 460px;
  }
 
 .member-info h3 {
@@ -112,6 +112,7 @@ p.bio {
   line-height: 1.4;
   margin-top: 1px;
   margin-top: auto;
+  text-align:center;
 }
 
 @media (max-width: 768px) {
