--- a/furfuturefunding/src/components/AboutUs.css
+++ b/furfuturefunding/src/components/AboutUs.css
@@ -64,6 +64,8 @@
 
 }
 
+
+
 .member-image {
   width: 100%;
   aspect-ratio: 1;
@@ -82,40 +84,41 @@
 .member-info {
   border: solid 2px #130265;
   border-radius: 8px;
-  padding: 1rem;
+  padding: 16px;
   margin-top: -1rem;
   max-width: 100%;
-  height: 460px;
+  height: 320px;
  }
-
-.member-info h3 {
-  min-height: 4rem;
-  font-size: 1.5rem;
-  color: #130265;
-  line-height: 1;
-  margin-top: 1rem;
-
-}
-
-p.position {
- color: #130265;
-  font-size: 1.25rem;
-  margin-top: 0.1px;
-  margin-bottom: 0px;
-  line-height: 1;
-}  
-
-p.bio { 
-  min-height: 4rem;
+ 
+ .member-info p.position {
   font-size: 1rem;
-  color: black;
-  line-height: 1.4;
-  margin-top: 1px;
-  margin-top: auto;
-  text-align:center;
+  color: #130265;
+  margin-top: 0;
+  padding: 0;
+  line-height: 1;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
+ .member-info h3 {
+  font-size: 1.2rem;
+  margin-top: 10px;
+  margin-bottom: 40px;
+  line-height: 1;
+  text-align: center;
+  
+ }
+ 
+ 
+ p.bio {
+  margin: 0;
+  font-size: 0.85rem;
+  line-height: 1.2;
+  text-align: left;
+ }
+ 
 
-@media (max-width: 768px) {
+ @media (max-width: 768px) {
   .about-section {
     padding: 1rem;
   }
@@ -125,18 +128,29 @@ p.bio {
     margin: 24px 0;
   }
 
-  p {
-    font-size: 1.25rem;
-    margin-bottom: 24px;
+  .member-info p.position{
+    font-size: 1.2rem;
+    margin-top: -30px;
+  }
+  p.bio {
+    font-size: 1rem;
+    margin-bottom: 4px;
+    text-align: center;
   }
 
   .team-grid {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 16px;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    max-width:400px;
+    margin: 0 auto;
   }
 
   .member-info h3 {
     font-size: 1.5rem;
+  }
+  
+  .member-info {
+    max-height: 230px;
   }
 }
 
@@ -147,16 +161,16 @@ p.bio {
 
   h1 {
     font-size: 1.75rem;
-    margin: 20px 0;
+    margin: 50px 0;
   }
 
   .team-grid {
     grid-template-columns: 1fr;
-    gap: 20px;
+    max-width: 400px;
   }
 
   .team-member {
-    max-width: 300px;
+    max-width: 400px;
     margin: 0 auto;
   }
 
@@ -168,11 +182,18 @@ p.bio {
     font-size: 1.25rem;
   }
 
-  p.position {
-    font-size: 1rem;
+  .member-info {
+    max-height: 230px;
+  }
+
+
+  .member-info p.position {
+    font-size: 1.2rem;
+    margin-top: -30px;
   }
 
   p.bio {
-    font-size: 0.875rem;
+    font-size: 0.8rem;
   }
 }
+  
