--- a/furfuturefunding/src/components/HeroSection.css
+++ b/furfuturefunding/src/components/HeroSection.css
@@ -1,4 +1,4 @@
-/* ScholarshipSearch.css */
+
 .container {
   margin-top: 72px;
   display: flex;
@@ -27,8 +27,8 @@
 }
 
 .logo-section img {
-  width: 300px; 
-  height: 300px;
+  width: 800px; 
+  height: 200px;
   align-items: center;
   display: flex;
   align-items: center;
@@ -36,16 +36,36 @@
 }
 
 .logo-container {
-  width: 192px;
-  height: 192px;
+  width: 200px;
+  height: 200px;
 }
 
-/* .logo {
-  background-color: #1e1b4b;
-  border-radius: 50%;
-  padding: 16px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+  
+  .headline {
+    width: 100%;
+    padding: 24px;
+  }
+  
+  .headline h1 {
+    font-size: 2.5rem;
+    max-width: 100%;
+    line-height: 1.2;
+    margin-top: 20px;
+  }
+  
+  .logo-section {
+    display: none;
+  }
+}
 
+@media (max-width: 375px) {
+  .headline h1 {
+    font-size: 2.5rem;
+    line-height: 1.2;
+    margin-top: 20px;
+  }
+}
