--- a/furfuturefunding/src/components/HeroSection.css
+++ b/furfuturefunding/src/components/HeroSection.css
@@ -1,4 +1,3 @@
-
 .container {
   margin-top: 72px;
   display: flex;
@@ -27,7 +26,7 @@
 }
 
 .logo-section img {
-  width: 800px; 
+  width: 800px;
   height: 200px;
   align-items: center;
   display: flex;
@@ -44,19 +43,19 @@
   .container {
     flex-direction: column;
   }
-  
+
   .headline {
     width: 100%;
     padding: 24px;
   }
-  
+
   .headline h1 {
     font-size: 2.5rem;
     max-width: 100%;
     line-height: 1.2;
     margin-top: 20px;
   }
-  
+
   .logo-section {
     display: none;
   }
@@ -67,5 +66,15 @@
     font-size: 2.5rem;
     line-height: 1.2;
     margin-top: 20px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .logo-section img {
+    margin-top: 30px;
+  }
+  .homepage container {
+    margin-top: 48px;
+    
   }
 }
