--- a/furfuturefunding/src/components/NavBar.css
+++ b/furfuturefunding/src/components/NavBar.css
@@ -12,7 +12,7 @@ nav {
   background-color: #F5F5F5;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
   width: 100%;
-  height: 13%;
+  height: 10%;
   box-sizing: border-box;
   position: fixed;
   top: 0;
@@ -20,7 +20,11 @@ nav {
   margin: 0;
   z-index: 1000;
 }
-
+@media (max-width: 1200px) {
+  nav {
+    max-height: 9%;
+  }
+}
 .desktop-logo {
   height: 8px;
   width: auto;
