--- a/furfuturefunding/src/components/NavBar.css
+++ b/furfuturefunding/src/components/NavBar.css
@@ -12,7 +12,7 @@ nav {
   background-color: #F5F5F5;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
   width: 100%;
-  height: 10%;
+  height: 15%;
   box-sizing: border-box;
   position: fixed;
   top: 0;
@@ -91,14 +91,17 @@ nav {
   .desktop-logo {
     display: none;
   }
-
+  nav {
+    height: 240px; /* Increase height */
+    padding: 1rem; /* Ensure proper padding */
+  }
   .mobile-logo {
     display: block;
     height: 50px;
     width: auto;
     transform: scale(4);
     margin-left: 40px;
-    margin-bottom: 15px;
+    margin-bottom: -1px;
   }
 
   .hamburger {
@@ -142,8 +145,8 @@ nav {
 
 @media (max-width: 375px) {
   nav {
-    padding: 0.5rem 1rem;
-    height: 10%;
+    height: 240px; /* Increase height */
+    padding: 1rem; /* Ensure proper padding */
   }
 
   .mobile-logo {
