--- a/furfuturefunding/src/components/OrganisationCard.css
+++ b/furfuturefunding/src/components/OrganisationCard.css
@@ -5,8 +5,9 @@
     border-radius: 8px;
     padding: 1.5rem;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
-    border: 1px solid #eaeaea;
-    margin-left: auto;
+    border: 2px solid black;
+    margin-left: 55rem;
+    margin-top:-33.5rem;
   }
   
   .organisation-logo {
