created img folder, moved all files and updated file paths

--- a/furfuturefunding/src/components/SignUpForm.css
+++ b/furfuturefunding/src/components/SignUpForm.css
@@ -1,6 +1,6 @@
 .signup-page {
     min-height: 100vh;
-    background-image: url('src/assets/ramcats_1.png');
+    background-image: url('src/img/ramcats_1.png');
     position: relative;
     overflow: hidden;
 }
