--- a/furfuturefunding/src/components/AboutUs.css
+++ b/furfuturefunding/src/components/AboutUs.css
@@ -9,18 +9,21 @@
   background-image: url(../assets/orange_swirl.png);
   margin-top: 10px;
 }
+
 .swirl-background {
   position: absolute;
   top: 50%;
   left: 50%;
   width: 90%;
   height: 120%;
-  background-image: url('/src/assets/orange_swirl.png'); /* Replace with actual swirl image */
+  background-image: url('/src/img/orange_swirl.png');
+  /* Replace with actual swirl image */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   transform: translate(-50%, -50%);
-  z-index: -1; /* Keeps it behind the team members */
+  z-index: -1;
+  /* Keeps it behind the team members */
 }
 
 .about-section::before {
@@ -100,9 +103,9 @@
   max-width: 100%;
   height: 320px;
   background-color: #f5f5f5;
- }
- 
- .member-info p.position {
+}
+
+.member-info p.position {
   font-size: 1rem;
   color: #130265;
   margin-top: 0;
@@ -112,25 +115,26 @@
   flex-direction: column;
   text-align: center;
 }
- .member-info h3 {
+
+.member-info h3 {
   font-size: 1.2rem;
   margin-top: 10px;
   margin-bottom: 40px;
   line-height: 1;
   text-align: center;
-  
- }
- 
- 
- p.bio {
+
+}
+
+
+p.bio {
   margin: 0;
   font-size: 0.85rem;
   line-height: 1.2;
   text-align: left;
- }
- 
+}
 
- @media (max-width: 768px) {
+
+@media (max-width: 768px) {
   .about-section {
     padding: 1rem;
   }
@@ -140,10 +144,11 @@
     margin: 24px 0;
   }
 
-  .member-info p.position{
+  .member-info p.position {
     font-size: 1.2rem;
     margin-top: -30px;
   }
+
   p.bio {
     font-size: 1rem;
     margin-bottom: 4px;
@@ -153,14 +158,14 @@
   .team-grid {
     grid-template-columns: 1fr;
     gap: 20px;
-    max-width:400px;
+    max-width: 400px;
     margin: 0 auto;
   }
 
   .member-info h3 {
     font-size: 1.5rem;
   }
-  
+
   .member-info {
     max-height: 230px;
   }
@@ -208,4 +213,3 @@
     font-size: 0.8rem;
   }
 }
-  
