--- a/furfuturefunding/src/components/OpportunityCard.css
+++ b/furfuturefunding/src/components/OpportunityCard.css
@@ -1,26 +1,23 @@
 /* Grid Container styles */
 .opportunities-container {
   width: 100%;
-  max-width: 1400px;
   margin: 0 auto;
-  padding: 20px;
-  position: relative;
-  overflow: visible;
+
 }
 
 .opportunities-grid {
   display: grid;
   grid-template-columns: repeat(3, minmax(300px, 400px));
-  gap: 20px;
-  padding: 20px;
-  width: 100%;
+  gap:15px;
+  padding: 10px;
+  width: 95%;
   justify-content:flex-end;
-  margin-left:3rem;
+  margin-left:6rem;
   }
 
 /* Base card styles */
 .opportunity-card {
-  background-color: #FF914D;
+  background-color: #cc7b49;
   border-radius: 8px;
   box-shadow: 0 8px 2px rgba(0, 0, 0, 0.1);
   padding: 1.5rem;
@@ -28,10 +25,9 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  min-width: 300px;
-  max-width: 400px;
+  min-width: 320px;
   position: relative;
-  min-height: 450px;
+  height: 550px;
 }
 
 .opportunity-card:hover {
@@ -45,6 +41,8 @@
   line-height: 1.2;
   color: #000000;
   margin-bottom: 1rem;
+  margin-top: 1.5rem;
+  margin-left: 9rem;
 }
 
 /* Header section */
@@ -77,6 +75,10 @@
   color: #130265;
 }
 
+a {
+  text-decoration: none;
+}
+
 /* Content styles */
 .card-content {
   display: flex;
@@ -86,11 +88,11 @@
 
 .info-row {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   gap: 12px;
   color: #000000;
   font-size: 1rem;
-  line-height: 1.5rem;
+  line-height: 1.3rem;
   margin-top: 1px;
 }
 
@@ -107,20 +109,30 @@
   font-size: 1.25rem;
 }
 
+.info-row span:last-child {
+  display: -webkit-box;
+  line-clamp: 2; 
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 2.6rem; 
+}
+
 .details {
   display: flex;
   flex-direction: column;
   gap: 12px;
   flex: 1;
+  margin-top: 20px;
 }
 
 .tags {
   display: flex;
   flex-wrap: wrap;
-  gap: 1px;
-  margin-top: auto;
+  gap: 2px; 
+  padding: 0 0 16px 0; 
+  width: 100%; 
 }
-
 .tag {
   padding: 6px 5.5px;
   border-radius: 10px;
@@ -129,7 +141,9 @@
   background-color: #07768a;
   white-space: nowrap;
   margin: 5px 0;
+  
 }
+
 
 .apply-button {
   width: 100%;
