--- a/furfuturefunding/src/components/NavBar.css
+++ b/furfuturefunding/src/components/NavBar.css
@@ -36,7 +36,7 @@ nav {
 }
 @media (max-width: 1200px) {
   nav {
-    max-height: 9%;
+    max-height: 15%;
   }
 }
 .desktop-logo {
@@ -102,6 +102,9 @@ nav {
 }
 
 @media (max-width: 768px) {
+  nav {
+    height: 15%; 
+  }
   .desktop-logo {
     display: none;
   }
@@ -111,8 +114,8 @@ nav {
     height: 50px;
     width: auto;
     transform: scale(4);
-    margin-left: 40px;
-    margin-bottom: -1px;
+    margin-left: 0px;
+    margin-top: -30px;
   }
 
   .hamburger {
