opp listing page now responsive

--- a/furfuturefunding/src/components/AboutUs.css
+++ b/furfuturefunding/src/components/AboutUs.css
@@ -6,7 +6,7 @@
   align-items: center;
   padding: 2rem;
   position: relative;
-  background-image: url(../assets/orange_swirl.png);
+  background-color: #f5f5f5;
   margin-top: 10px;
 }
 
