--- a/furfuturefunding/src/components/LoginForm.css
+++ b/furfuturefunding/src/components/LoginForm.css
@@ -14,8 +14,7 @@
 }
 
 .login-background {
-  background-image: url('src/img/ramcats_1.png');
-  background-size: cover;
+  background-size:auto;
   background-position: center;
   width: 100vw;
   height: 100vh;
