--- a/furfuturefunding/src/components/OpportunityCard.css
+++ b/furfuturefunding/src/components/OpportunityCard.css
@@ -20,7 +20,7 @@
 .opportunities-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 2rem;
+  gap: 33px;
   justify-content: center;
   padding: 10px;
   width:85%;
