opp cards title

--- a/furfuturefunding/src/components/OpportunityCard.css
+++ b/furfuturefunding/src/components/OpportunityCard.css
@@ -55,7 +55,10 @@
   margin-bottom: 1rem;
   margin-top: 2rem;
 }
-
+.opportunities-container h1{
+  background-color: white;
+  font-size: 2rem;
+}
 /* Header section */
 .header-section {
   display: flex;
