--- a/furfuturefunding/src/components/OrganisationCard.css
+++ b/furfuturefunding/src/components/OrganisationCard.css
@@ -1,13 +1,13 @@
 .organisation-card {
-  width: 400px;
+  width: 300px;
   align-self: flex-end;
   background-color: #FF914D;
   border-radius: 8px;
   padding: 1.5rem;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
   border: 2px solid black;
-  margin-left:65rem;
-  margin-top:-45rem;
+  margin-left:55em;
+  margin-top:-40rem;
 }
 
 
