update contact and login

--- a/furfuturefunding/src/components/ContactForm.css
+++ b/furfuturefunding/src/components/ContactForm.css
@@ -1,7 +1,7 @@
 .contact-page {
   min-height: 100vh;
   margin-top: 60px;
-  background-image: url("src/img/ramcats_1.png");
+  background-image: url(https://1drv.ms/i/c/42e13c4316a5d144/IQQBprp3UFxmQ5gXu1OG-nkDAUI5rAqvtSFxKm5tJH7t6_g);
   position: relative;
   overflow: hidden;
   z-index: 0; /* Added to ensure proper stacking */
